--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -1,7 +1,10 @@
-$color-purple: #9094FF;
+$color-teal: #6dffda;
+$color-white: #fdfdfd;
 $color-light-grey: #EBEBEB;
-$color-dark: #343434;
+$color-dark: #1e1e1e;
+$color-black: #131313;
 $max-width: 1000px;
+$sequel: Sequel, Arial, Helvetica, sans-serif;
 
 @mixin centered {
   width: 100%;
