--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -2,15 +2,16 @@
 
 .contact {
   text-align: center;
-  background-color: mixins.$color-light-grey;
+  background-color: mixins.$color-dark;
   padding-top: 100px;
   padding-bottom: 100px;
   &__title {
     font-size: 36px;
 
     .colored {
+      font-family: mixins.$sequel;
       font-size: inherit;
-      color: mixins.$color-purple;
+      color: mixins.$color-teal;
     }
   }
 
@@ -26,10 +27,10 @@
     border-radius: 4px;
     padding: 12px 20px;
     border: none;
-    background-color: mixins.$color-dark;
-    color: white;
+    background-color: mixins.$color-white;
+    color: mixins.$color-black;
     position: relative;
-    z-index: 99;
+    z-index: 5;
 
     &:hover {
       transition: 0.2s all;
@@ -41,7 +42,7 @@
     &:before {
       content: ' ';
       position: absolute;
-      background-color: mixins.$color-dark;
+      background-color: mixins.$color-white;
       top: 0;
       left: 0;
       border-radius: 4px;
