--- a/styles/Product.module.scss
+++ b/styles/Product.module.scss
@@ -2,40 +2,18 @@
 .product {
   display: grid;
   width: 100%;
+  @include mixins.mobile {
+    width: auto;
+  }
 
   grid-template-areas:
-  "title        title         image"
+  "title        title        image"
   "description  description  image"
   "button       button       image"
   ".            .            image";
   grid-template-columns: 1fr 1fr 3fr;
   margin-bottom: 100px;
   grid-column-gap: 100px;
-
-  &:nth-of-type(odd) {
-    grid-template-areas:
-    "image title        title"
-    "image description  description"
-    "image button       button"
-    "image .            .";
-    grid-template-columns: 3fr 1fr 1fr;
-
-    @include mixins.mobile {
-      grid-template-areas:
-      "image        image      "
-      "title         title     "
-      "description  description"
-      "button       button     ";
-      grid-template-columns: 1fr 1fr;
-
-      img {
-        height: 300px;
-        max-height: 300px;
-        width: 100%;
-        margin-bottom: 30px;
-      }
-    }
-  }
 
   &__title {
     margin: 0;
@@ -116,14 +94,14 @@
   @include mixins.mobile {
     grid-template-areas:
     "image        image      "
-    "title         title     "
+    "title        title     "
     "description  description"
     "button       button     ";
     grid-template-columns: 1fr 1fr;
 
     .product__image {
       height: 300px;
-      margin-bottom: 30px;
+      margin-bottom: 160px;
     }
   }
 }
