--- a/styles/Contact-Page.module.scss
+++ b/styles/Contact-Page.module.scss
@@ -1,7 +1,8 @@
 @use 'mixins';
 
 .contact_container {
-    @include mixins.centered
+    @include mixins.centered;
+    margin-bottom: 20vh;
 }
 
 .form {
