--- a/styles/Jumbotron.module.scss
+++ b/styles/Jumbotron.module.scss
@@ -1,16 +1,6 @@
 @use 'mixins';
 
-.background-image {
-  position: absolute;
-  opacity: 0.02;
-  left: -10vw;
-  top: -10vh;
-  height: 75vh;
-  transform: rotate(20deg);
-  pointer-events: none;
-}
-
-.promotional-message {
+.promotionalmessage {
   margin-bottom: 100px;
   margin-top: 25px;
   text-align: center;
@@ -19,17 +9,27 @@
     font-size: 20px;
     line-height: normal;
     text-align: center;
-    letter-spacing: 0.4em;
     text-transform: uppercase;
     margin: 0;
+    @include mixins.mobile {
+      font-size: 40px;
+    }
   }
 
   h2 {
     font-size: 100px;
     @include mixins.mobile {
-      font-size: 50px;
+      font-size: 120px;
     }
     margin: 0;
+    margin-top: -24px;
     color: mixins.$color-teal;
+  }
+
+  p {
+    margin: 8px;
+    @include mixins.mobile {
+      font-size: 40px;
+    }
   }
 }
