--- a/styles/Product.module.scss
+++ b/styles/Product.module.scss
@@ -1,16 +1,16 @@
 @use 'mixins';
 .product {
-  display: grid;
+  display: flex;
   width: 100%;
+  align-items: center;
+  justify-content: center;
 
-  grid-template-areas:
-  "title        title        image"
-  "description  description  image"
-  "button       button       image"
-  ".            .            image";
-  grid-template-columns: 1fr 1fr 3fr;
-  margin-bottom: 100px;
-  grid-column-gap: 100px;
+  &__info {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 4%;
+  }
 
   &__title {
     margin: 0;
@@ -28,6 +28,16 @@
     }
   }
 
+  &__options {
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 8px;
+    input, select {
+      padding: 8px;
+    }
+  }
+
   &__price {
     color: mixins.$color-white;
     grid-area: price;
@@ -40,6 +50,7 @@
     max-width: 100%;
     max-height: 100%;
     object-fit: fill;
+    z-index: 1;
 
     @include mixins.mobile {
       height: 300px;
@@ -87,15 +98,9 @@
       transition: all 0.3s cubic-bezier(0.16, 0.8, 0.66, 1.54);
     }
   }
-  // TODO move mixins in colors
-  @include mixins.mobile {
-    grid-template-areas:
-    "image        image      "
-    "title        title     "
-    "description  description"
-    "button       button     ";
-    grid-template-columns: 1fr 1fr;
 
+  @include mixins.mobile {
+    flex-direction: column;
     .product__image {
       height: 300px;
       margin-bottom: 160px;
