--- a/styles/Faq.module.scss
+++ b/styles/Faq.module.scss
@@ -1,8 +1,8 @@
 @use 'mixins';
 
 .faq {
-  text-align: center;
   background-color: mixins.$color-dark;
+  @include mixins.centered;
   padding-top: 100px;
   padding-bottom: 100px;
   &__title {
@@ -16,8 +16,26 @@
   }
 
   &__paragraph {
-    @include mixins.centered;
     font-weight: 600;
+  }
+
+  &__examples {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    div {
+      height: 200px;
+    }
+    @include mixins.mobile {
+      div {
+        width: 50%;
+        height: 386px;
+      }
+    }
+  }
+
+  &__colors {
+    width: 100%;
   }
 
   h3 {
