--- a/styles/Carousel.module.scss
+++ b/styles/Carousel.module.scss
@@ -1,9 +1,18 @@
 @use 'mixins';
 
 .carousel_container {
-    @include mixins.centered
+    width: 100vw;
+    max-width: 98vw;
+    margin-top: -100px;
+    :root {
+        --swiper-theme-color: #6dffda;
+    }
+    img {
+        height: 100vh;
+        width: 1920px;
+    }
+    @include mixins.mobile {
+        max-width: 100vw;
+        margin-top: -20vh;
+    }
 }
-
-// :root {
-//     --swiper-theme-color: #6dffda;
-// }
