Products Pages Update

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -82,11 +82,11 @@
   }
 
   &__social_link {
-    width: 32px;
-    padding: 0 24px 0 0;
+    width: 36px;
+    margin: 12px;
     }
   
     &__social {
-      width: 42px;
+      width: 36px;
     }
 }
