--- a/styles/Collections.module.scss
+++ b/styles/Collections.module.scss
@@ -47,6 +47,9 @@
     color: white;
     position: relative;
     text-decoration: none;
+    @include mixins.mobile {
+        font-size: 32px;
+    }
 
     &:hover {
       transition: 0.2s all;
