--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -31,6 +31,7 @@
     color: mixins.$color-black;
     position: relative;
     z-index: 5;
+    cursor: pointer;
 
     &:hover {
       transition: 0.2s all;
