--- a/styles/ProductListView.module.scss
+++ b/styles/ProductListView.module.scss
@@ -28,6 +28,9 @@
     grid-area: title;
     font-size: 32px;
     font-weight: bold;
+    @include mixins.mobile {
+      font-size: 48px;
+    }
   }
 
   &__description {
@@ -55,6 +58,9 @@
     grid-area: price;
     font-size: 16px;
     font-weight: bold;
+    @include mixins.mobile {
+      font-size: 32px;
+    }
   }
 
   &__image {
