--- a/styles/Collections.module.scss
+++ b/styles/Collections.module.scss
@@ -15,10 +15,13 @@
     @include mixins.flex-centered;
     position: static;
     width: 50%;
+    height: 500px;
+    overflow: hidden;
     text-align: center;
     @include mixins.mobile {
         width: 100%;
         padding: 0;
+        height: auto;
     }
 }
 
@@ -78,6 +81,8 @@
     opacity: .6;
     transition: ease .5s;
     transform: scale(1.2);
+    object-fit: cover;
+    width: 100%;
 }
 
 .collection1:hover {
