--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -120,6 +120,36 @@ body {
   grid-area: button;
 }
 
+// Modal
+
+.modal {
+  @include mixins.flex-centered;
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  z-index: 5;
+  background-color: rgba(0, 0, 0, 0.452);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  pointer-events: none;
+  opacity: 0;
+  animation: modal 0.3s ease 5s 1 forwards;
+  @include mixins.mobile {
+    height: auto;
+  }
+}
+
+@keyframes modal {
+  from {pointer-events: none; opacity: 0;}
+  to {pointer-events: all; opacity: 1;}
+}
+
+.modal-closed {
+  display: none;
+}
+
 // Swiper
 
 :root {
