Styling Issue Fixes

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -156,7 +156,11 @@ body {
   margin: 16px 0;
 }
 
-.ReactModal__Content--after-open > h2, p {
+.ReactModal__Content--after-open > h2 {
+  color: #131313;
+}
+
+.ReactModal__Content--after-open > p {
   color: #131313;
 }
 
