--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -156,11 +156,7 @@ body {
   margin: 16px 0;
 }
 
-.ReactModal__Content--after-open > h2 {
-  color: #131313;
-}
-
-.ReactModal__Content--after-open > p {
+.modal-content > p {
   color: #131313;
 }
 
