--- a/styles/Jumbotron.module.scss
+++ b/styles/Jumbotron.module.scss
@@ -2,13 +2,14 @@
 
 .promotionalmessage {
   text-align: center;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  text-shadow: 0px 0px 16px #00000080;
+  // position: absolute;
+  // width: 100%;
+  // height: 100%;
+  // text-shadow: 0px 0px 16px #00000080;
+  min-height: 60vh;
   @include mixins.flex-centered;
   flex-direction: column;
-  background: linear-gradient(0deg, rgba(109,255,218,.6) 0%, rgba(109,255,218,0) 100%);
+  // background: linear-gradient(0deg, rgba(109,255,218,.6) 0%, rgba(109,255,218,0) 100%);
 
   h3 {
     font-size: 20px;
