--- a/styles/Product.module.scss
+++ b/styles/Product.module.scss
@@ -63,7 +63,7 @@
   }
 
   &__button {
-    margin-left: 30px;
+    // margin-left: 30px;
     font-size: 14px;
     font-weight: bold;
     border-radius: 4px;
