Product Page Options

--- a/styles/Product.module.scss
+++ b/styles/Product.module.scss
@@ -59,7 +59,8 @@
 
   &__price-button-container {
     display: flex;
-    grid-area: button;
+    align-items: center;
+    flex-direction: column;
   }
 
   &__button {
