--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -117,7 +117,16 @@ body {
 
 .product__price-button-container {
   display: flex;
-  grid-area: button;
+  flex-direction: column;
+}
+
+.product__price-button-container > label {
+  color: mixins.$color-white;
+}
+
+.product__price-button-container > select {
+  padding: 6px 8px;
+  margin: 8px 0;
 }
 
 // Button
