Works With Line

--- a/styles/Product.module.scss
+++ b/styles/Product.module.scss
@@ -29,6 +29,11 @@
     }
   }
 
+  &__workswith {
+    margin-top: 18px;
+    width: 100%;
+  }
+
   &__options {
     color: #ffffff;
     display: flex;
