--- a/styles/Contact-Page.module.scss
+++ b/styles/Contact-Page.module.scss
@@ -1,31 +1,70 @@
-@use 'mixins';
+@use "mixins";
 
 .contact_container {
-    @include mixins.centered;
-    margin-bottom: 20vh;
+  @include mixins.centered;
+  margin-bottom: 20vh;
 }
 
 .form {
-    color: white;
-    display: flex;
-    flex-direction: column;
+  color: white;
+  display: flex;
+  flex-direction: column;
 }
 
 .form > label input textarea {
-    border: none;
-    appearance: none;
-    -webkit-appearance: none;
+  border: none;
+  appearance: none;
+  -webkit-appearance: none;
 }
 
 .input {
-    margin: 16px 0;
-    padding: 15px;
-    font-size: 24px;
+  margin: 16px 0;
+  padding: 15px;
+  font-size: 24px;
 }
 
 .textarea {
-    resize: none;
-    height: 30vh;
-    margin: 16px 0;
-    padding: 15px;
+  resize: none;
+  height: 30vh;
+  margin: 16px 0;
+  padding: 15px;
+}
+
+.contactbuttons {
+  button {
+    margin-top: 15px;
+    margin-right: 24px;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 4px;
+    padding: 12px 20px;
+    border: none;
+    background-color: mixins.$color-white;
+    color: mixins.$color-black;
+    position: relative;
+    z-index: 5;
+    cursor: pointer;
+
+    &:hover {
+      transition: 0.2s all;
+      &:before {
+        transform: scale(1.15, 1.4);
+      }
+    }
+
+    &:before {
+      content: " ";
+      position: absolute;
+      background-color: mixins.$color-white;
+      top: 0;
+      left: 0;
+      border-radius: 4px;
+      width: 100%;
+      height: 100%;
+      opacity: 0.4;
+      z-index: -1;
+      transform: scale(1);
+      transition: all 0.3s cubic-bezier(0.16, 0.8, 0.66, 1.54);
+    }
+  }
 }
