--- a/styles/Banner.module.scss
+++ b/styles/Banner.module.scss
@@ -1,13 +1,13 @@
-@use 'mixins';
+@use "mixins";
 
 .banner {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: mixins.$color-black;
-    font-weight: bold;
-    position: fixed;
-    height: 5vh;
-    z-index: 5;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fea9c1;
+  font-weight: bold;
+  position: fixed;
+  height: 5vh;
+  z-index: 5;
 }
