--- a/styles/Partners.module.css
+++ b/styles/Partners.module.css
@@ -30,9 +30,9 @@
   display: flex;
   flex-direction: column;
   width: calc(20% - 6px);
-  height: 300px;
+  height: auto;
   margin-right: 6px;
-  margin-bottom: 48px;
+  margin-bottom: 12px;
 }
 
 .partners__card p {
