--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Material+Icons");
 @font-face {
   font-family: Sequel;
-  src: url("../public/font/Sequel100Black-85.ttf") format("ttf");
+  src: url("../public/fonts/Sequel100Black-85.ttf");
 }
 
 html,
